--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.7.2",
+    "@material-ui/icons": "^4.5.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.3",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^3.26.2",
+    "axios": "^0.19.0",
     "react": "^16.12.0",
+    "react-animated-text": "^0.1.4",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.3.0"
+    "react-is": "^16.12.0",
+    "react-particles-js": "^2.7.0",
+    "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "3.3.0",
+    "react-tooltip": "^3.11.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^5.0.0-rc.2",
+    "typeface-roboto": "0.0.75"
   },
   "scripts": {
     "start": "react-scripts start",
